syntax = "proto3";

package storage.v1;

import "google/protobuf/empty.proto";

option go_package = "github.com/seaweedfs/seaweedfs/weed/storage/backend/udm/v1;v1";

service UDMStorage {
  rpc UploadFile (FileRequest) returns (stream FileInfo) {
  }

  rpc DownloadFile (FileRequest) returns (stream FileInfo) {
  }

  rpc CacheFile (FileKey) returns (CacheFileReply) {
  }

  rpc ReadSuperBlock (FileKey) returns (ReadSuperBlockReply) {
  }

  rpc DeleteFile (FileKey) returns (google.protobuf.Empty) {
  }
}

message FileRequest {
  string key = 1;
  string file = 2;
}

message FileKey {
  string key = 1;
}

message FileInfo {
  int64 total_bytes = 1;
  float percentage = 2;
}

message CacheFileReply {
  string cache_file = 1;
}

message ReadSuperBlockReply {
  bytes data = 1;
}